--- a/inst/KvartalsrapportNNRR_v3.Rnw
+++ b/inst/KvartalsrapportNNRR_v3.Rnw
@@ -49,7 +49,7 @@ library(lubridate)
 # 105821 <- 'Levanger'
 # 103736 <- 'Drammen'
 # 700138 <- 'Stavern'
-reshID <- 601032
+reshID <- 700138
 Inkl_i_rapp <- ifelse(reshID %in% c(114174, 104293, 109834, 700138),
                       "\\inkltrue", "\\inklfalse")
 
@@ -617,26 +617,13 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh.pdf}
+\includegraphics[width=\Sexpr{figstr*0.9}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh.pdf}
 \caption{Andel pasienter som rapporterer nytte (helt, mye eller litt bedre) 6 og 12 mnd etter utredning/behandling i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
-
-% \begin{figure}[ht]
-% \centering
-% \includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_gruppert_6mnd.pdf}
-% \caption{Andel pasienter som rapporterer nytte (helt, mye eller litt bedre) 6 mnd etter utredning/behandling i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal. Gruppert etter type behandling.}
-% \end{figure}
-%
-% \begin{figure}[ht]
-% \centering
-% \includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_gruppert_12mnd.pdf}
-% \caption{Andel pasienter som rapporterer nytte (helt, mye eller litt bedre) 12 mnd etter utredning/behandling i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal. Gruppert etter type behandling.}
-% \end{figure}
-
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_gruppert.pdf}
+\includegraphics[width=\Sexpr{figstr*0.9}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_gruppert.pdf}
 \caption{Andel pasienter som rapporterer nytte (helt, mye eller litt bedre) 6 og 12 mnd etter utredning/behandling i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal. Gruppert etter type behandling.}
 \end{figure}
 
@@ -657,13 +644,13 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}bedring_smerte_hvile.pdf}
+\includegraphics[width=\Sexpr{figstr*0.9}\textwidth]{\Sexpr{figfolder}bedring_smerte_hvile.pdf}
 \caption{Andel pasienter som 6 og 12 mnd etter utredning/behandling har hatt klinisk bedring av smerte (30 \% eller mer reduksjon) i hvile i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}bedring_smerte_aktiv.pdf}
+\includegraphics[width=\Sexpr{figstr*0.9}\textwidth]{\Sexpr{figfolder}bedring_smerte_aktiv.pdf}
 \caption{Andel pasienter som 6 og 12 mnd etter utredning/behandling har hatt klinisk bedring av smerte (30 \% eller mer reduksjon) i aktivitet i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
@@ -674,26 +661,14 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd.pdf}
+\includegraphics[width=\Sexpr{figstr*0.9}\textwidth]{\Sexpr{figfolder}fornoyd.pdf}
 \caption{Andel pasienter som 6 og 12 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
-
-% \begin{figure}[ht]
-% \centering
-% \includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert_6mnd.pdf}
-% \caption{Andel pasienter som 6 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.  Gruppert etter type behandling.}
-% \end{figure}
-%
-% \begin{figure}[ht]
-% \centering
-% \includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert_12mnd.pdf}
-% \caption{Andel pasienter som 12 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.  Gruppert etter type behandling.}
-% \end{figure}
 
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert.pdf}
+\includegraphics[width=\Sexpr{figstr*0.9}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert.pdf}
 \caption{Andel pasienter som 6 og 12 mnd etter utredning/behandling angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.  Gruppert etter type behandling.}
 \end{figure}
 
